# intelligent-mail-summary-service

./: .gitignore  README.md  main.py  pyproject.toml
config/: gmail.py  llm.py  logging.py
routes/: email.py
schemas/: email.py  email_summary.py  original_email.py
scripts/: init_ollama.py  test_prompts.py
services/: auth.py  auth_service.py  email.py  email_service.py  gmail_auth.py  llm.py  prompts.py
services/gmail/: auth.py  inbox.py  utils.py
services/llm/: summary.py
utils/: email_parser.py  exceptions.py  parsing.py
utils/email/: security.py
utils/logger/: logger.py  security.py
